@@ -2,6 +2,8 @@ Changes in Shorewall 4.4.2.3
 
 1)  Fix internal error with RETAIN_ALIASES=No.
 
+2)  Only detect IP configuration when needed.
+
 Changes in Shorewall 4.4.2.2
 
 1)  Another fix for 'routeback' in routestopped.
